[incubator-kie-issues#1891] Adding required methods. Fixing scenario-simulation. Cleanup